name:                matasano
version:             0.1.0.0
synopsis:            The Matasano crypto challenges
description:         Library dedicated to the resolution of the Matasano cryptography challenges, written for my personnal education.
homepage:            http://github.com/Letheed/matasano
license:             BSD3
license-file:        LICENSE
author:              Letheed
maintainer:          dev@daweb.se
copyright:           2016 Letheed
category:            Crypto
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LibCommon
                       Base64
                       Bytes
                       Cipher
                       Hamming
                       Padding
                       Xor
  build-depends:       base >= 4.7 && < 5
                     , array >= 0.5
                     , split >= 0.2
                     , vector >= 0.11
  default-language:    Haskell2010

executable matasano-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       AppCommon
                       Set01
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring >= 0.10
                     , cryptonite >= 0.10
                     , matasano
  default-language:    Haskell2010

test-suite matasano-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , matasano
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Letheed/matasano
