name:                matasano
version:             0.1.0.0
synopsis:            Matasano crypto challenges
description:         This library is dedicated to the resolution of the Matasano cryptography challenges.
                     It is written for my personnal education. Do not use it for actual cryptographical purposes.
homepage:            https://github.com/Letheed/matasano
bug-reports:         https://github.com/Letheed/matasano/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Letheed
maintainer:          dev@daweb.se
copyright:           2016 Letheed
category:            Cryptography
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LibCommon
                       AES
                       Base64
                       Bytes
                       Cipher
                       Hamming
                       Padding
                       Random
                       Xor
  build-depends:       base >= 4.7 && < 5
                     , array >= 0.5
                     , random >= 1.1
                     , result >= 0.1
                     , split >= 0.2
                     , vector >= 0.11
  default-language:    Haskell2010

executable matasano-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       AppCommon
                       Set01
                       Set02
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , matasano
                     , random >= 1.1
                     , result >= 0.1
  default-language:    Haskell2010
test-suite matasano-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , matasano
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Letheed/matasano
